--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.3",
     "@tailwindcss/postcss": "^4.1.14",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
